--- a/src/index.css
+++ b/src/index.css
@@ -29,23 +29,17 @@ body {
   padding: 0;
   list-style-type: none;
 }
-/* div.scrollmenu {
-  background-color: #333;
+div.scrollmenu {
   overflow: auto;
-  white-space: nowrap;
 }
 
 div.scrollmenu a {
-  display: inline-block;
   color: white;
   text-align: center;
-  padding: 14px;
   text-decoration: none;
 }
 
-div.scrollmenu a:hover {
-  background-color: #777;
-} */
+
 
 .card {
   position: relative;
