--- a/src/index.css
+++ b/src/index.css
@@ -29,15 +29,6 @@ body {
   padding: 0;
   list-style-type: none;
 }
-div.scrollmenu {
-  overflow: auto;
-}
-
-div.scrollmenu a {
-  color: white;
-  text-align: center;
-  text-decoration: none;
-}
 
 
 
@@ -154,7 +145,7 @@ div.scrollmenu a {
 
 .wrapper {
   margin-top: 2.5em;
-  margin-left: 15em;
+  margin-left: 10em;
   display: flex;
 }
 
@@ -240,4 +231,82 @@ div.scrollmenu a {
   align-items: center;
   display: flex;
   justify-content: center;
+}
+
+.slider {
+  display: flex;
+  background-repeat: no-repeat;
+  flex-direction: row;
+  overflow-y: hidden;
+  overflow-x: auto;
+  margin-left: 110px !important;
+  margin-right: 110px !important;
+  margin-top: 10rem !important;
+
+}
+
+.slide {
+  width: 20rem;
+  flex-shrink: 0;
+  height: 100%;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.slider::-webkit-scrollbar {
+    height: 8px;
+    margin-left: 30px;
+    float: left;
+    background: #F5F5F5;
+    overflow-y: scroll;
+    margin-top: 2rem;
+}
+
+/* Ponemos un color de fondo y redondeamos las esquinas del thumb */
+.slider::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+  margin-bottom: 4rem;
+  width: 10px;
+	background-color: #666464;
+}
+
+#styleScrollbar::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.slider::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+background-color: #F5F5F5;
+border-radius: 10px;
+}
+
+
+/* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.slider::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+	background-color: #000000;
+
+}
+
+/* Cambiamos el fondo cuando esté en active */
+.slider::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+  border-radius: 10px;
+	background-color: #000000;
+
+}
+
+
+.sl {
+  margin-left: 50px !important;
+  margin-right: 50px !important;
+  margin-bottom: 200px !important; 
 }
